# AI-Sudoku-Solver-GUI

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.MD  README.md  pyproject.toml  setup.bat  setup.sh
puzzles/: easy_001.json  hard_001.json  medium_001.json
src/sudoku/: __init__.py  app.py
src/sudoku/controller/: __init__.py
src/sudoku/controller.py/: controller.py
src/sudoku/data/: __init__.py  board.py  cell.py  serialiser.py  validator.py
src/sudoku/events/: __init__.py  bus.py  types.py
src/sudoku/gui/: __init__.py  board_widget.py  control_panel.py  status_bar.py  theme.py
src/sudoku/solver/: __init__.py  engine.py  strategies.py
tests/: conftest.py
tests/test_app/: test_app.py
tests/test_controller/: test_controller.py
tests/test_data/: test_board.py  test_cell.py  test_serialiser.py  test_validator.py
tests/test_events/: test_bus.py  test_types.py
tests/test_gui/: test_board_widget.py  test_control_panel.py  test_status_bar.py  test_theme.py
tests/test_strategies/: test_engine.py  test_strategies.py
