[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sudoku-solver"
version = "0.1.0"
description = "A data-driven, event-bus-powered GUI Sudoku Solver built with pygame-ce"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "sudoku-solver contributors" }]
requires-python = ">=3.11"
keywords = ["sudoku", "solver", "pygame", "gui", "puzzle", "ai", "backtracking", "constraint-propagation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Games/Entertainment :: Puzzle Games",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pygame-ce>=2.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4.0",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[project.scripts]
sudoku-solver = "sudoku.app:main"

[project.urls]
Homepage   = "https://github.com/yourname/sudoku-solver"
Repository = "https://github.com/yourname/sudoku-solver"
"Bug Tracker" = "https://github.com/yourname/sudoku-solver/issues"
Changelog  = "https://github.com/yourname/sudoku-solver/CHANGELOG.md"

# ---------------------------------------------------------------------------
# Hatch
# ---------------------------------------------------------------------------
[tool.hatch.build.targets.wheel]
packages = ["src/sudoku"]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
src          = ["src"]
line-length  = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "ANN", # flake8-annotations (type hints)
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
]
ignore = [
    "ANN101", # missing type annotation for self
    "ANN102", # missing type annotation for cls
]

[tool.ruff.lint.isort]
known-first-party = ["sudoku"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ANN",  # type annotations not required in tests
    "S101", # assert statements are fine in pytest
]

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version      = "3.11"
strict              = true
warn_return_any     = true
warn_unused_configs = true
mypy_path           = "src"
namespace_packages  = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = "pygame.*"
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths   = ["tests"]
addopts     = "-v --tb=short --cov=sudoku --cov-report=term-missing"
python_files   = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["src/sudoku"]
omit   = ["*/tests/*", "*/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
